# karpathy_nn

./: .gitignore  LICENSE  README.md  pyproject.toml
karpathy_nn/chatgpt/: bigram_lecture.py  gpt_extended.py  gpt_lecture.py
karpathy_nn/makemore/: bigram.py
karpathy_nn/makemore/data/: load_data.py
karpathy_nn/micrograd/: engine.py  nn.py  test_engine.py  utils.py
notebooks/chatgpt/: notebook.ipynb
notebooks/makemore/: 01_bigram.ipynb  02_mlp.ipynb  03_activations_gradients.ipynb  04_backpropagation.ipynb  05_wavenet.ipynb
notebooks/micrograd/: 01_engine.ipynb  02_nn.ipynb  03_demo.ipynb  04_exercises.ipynb
