[tool.poetry]
name = "karpathy-nn"
version = "0.1.0"
description = ""
authors = ["Balint Mucsanyi <mucsanyibalint99@gmail.com>"]
readme = "README.md"
packages = [{include = "karpathy_nn"}]

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
jupyterlab = "^3.6.1"
graphviz = "^0.20.1"
torch = "^1.13.1"
scikit-learn = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ipython = "^8.10.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
